--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ baseurl: ""
 title: EyePiercings' Website
 
 # Short description of your site
-description: My website for school and design!
+description: Website for school and design!
 
 # --- Navigation bar options --- #
 
