--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # baseurl is the website's URL without the hostname
 
 # If you are building a simple GitHub user page (http://username.github.io) then use these settings:
-url: "http://eyepiercings.github.io"
+url: "http://desmondshawareb.me"
 baseurl: ""
 
 # If you are building a GitHub project page then use these settings:
@@ -14,10 +14,10 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: EyePiercings' Website
+title: Desmond Shawareb
 
 # Short description of your site
-description: Website for school and design!
+description: Williams College/Computer Science
 
 # --- Navigation bar options --- #
 
@@ -26,9 +26,7 @@ navbar-links:
   About Me: "aboutme"
   Projects: 
     - Human computer interaction: "hci"
-  Resources:
-    - Learn markdown: "http://www.markdowntutorial.com/"
-    - GitHub Pages: "https://pages.github.com/"
+    
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
@@ -72,7 +70,7 @@ author:
 # If you want to add a new link that isn't here, you'll need to also edit the file _data/SocialNetworks.yml
 social-network-links:
   rss: true
-  email: "os1@williams.com"
+  email: "om.shawareb@gmail.com"
 #  facebook: yah
   github: eyepiercings
 #  twitter: daattali
