--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,8 @@ description: Williams College/Computer Science
 navbar-links:
   About Me: "aboutme"
   Projects: 
-    - Human computer interaction: "hci"
-    - Design Project: grchen.com/thisprojectistrash
+    - Human Computer Interaction: "hci"
+    - Design Project: "grchen.com/thisprojectistrash"
     
 
 # Image to show in the navigation bar - image must be a square (width = height)
@@ -98,7 +98,7 @@ share-links-active:
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "eyepiercings.github.io"  # eg. "deanattali.com/beautiful-jekyll"
+url-pretty: "doshaw.com"  # eg. "deanattali.com/beautiful-jekyll"
 
 # --- Web Statistics Section --- #
 
