--- a/_config.yml
+++ b/_config.yml
@@ -26,12 +26,12 @@ navbar-links:
   About Me: "aboutme"
   Projects: 
     - Human Computer Interaction: "hci"
-    - Design Project: "grchen.com/thisprojectistrash"
+    - Design Project: "http://www.grchen.com/thisprojectistrash"
     
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/img/avatar-icon.png"
+avatar: "/img/projImg/team/desmond.jpg"
 
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter
