--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # baseurl is the website's URL without the hostname
 
 # If you are building a simple GitHub user page (http://username.github.io) then use these settings:
-url: "http://eyepiercings.github.io"
+url: "http://www.doshaw.com"
 baseurl: ""
 
 # If you are building a GitHub project page then use these settings:
@@ -23,11 +23,15 @@ description: Williams College/Computer Science
 
 # List of links in the navigation bar
 navbar-links:
+  Home: "http://www.doshaw.com"
   About Me: "aboutme"
   Projects: 
     - Human Computer Interaction: "hci"
     - Design Project: "http://www.grchen.com/thisprojectistrash"
-    
+  HCI Assignments: 
+    - Design Manifesto: "_posts/2018-05-06-designmanifesto"
+    - Project Proposal: "_posts/2018-02-11-projectproposal"
+    - Research Paper Report: "_posts/2018-04-23-researchpaperreport"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
